05-TPI/bison.output
Nonterminals useless in grammar

    unidad_de_programa
    unidad_de_traduccion_no_reconocido


Terminals unused in grammar

    INCLUDE
    DEFINE


Rules useless in grammar

  229 unidad_de_programa: INCLUDE unidad_de_programa
  230                   | DEFINE expresion_primaria unidad_de_programa
  231                   | unidad_de_traduccion
  232                   | no_reconocido unidad_de_traduccion
  233                   | unidad_de_traduccion_no_reconocido
  234                   | error unidad_de_traduccion

  235 unidad_de_traduccion_no_reconocido: unidad_de_traduccion no_reconocido


State 43 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 126 conflicts: 4 reduce/reduce
State 127 conflicts: 4 reduce/reduce
State 154 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: unidad_de_traduccion $end

    1 no_reconocido: NO_RECONOCIDO

    2 unidad_de_traduccion: declaracion_externa
    3                     | unidad_de_traduccion declaracion_externa

    4 declaracion_externa: definicion_de_funcion
    5                    | declaracion

    6 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
    7                      | declarador lista_de_declaracion sentencia_compuesta
    8                      | especificadores_de_declaracion declarador sentencia_compuesta
    9                      | declarador sentencia_compuesta

   10 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   11            | especificadores_de_declaracion ';'

   12 lista_de_declaracion: declaracion
   13                     | lista_de_declaracion declaracion

   14 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   15                               | especificador_categoria_almacenamiento
   16                               | especificador_de_tipo especificadores_de_declaracion
   17                               | especificador_de_tipo
   18                               | calificador_de_tipo especificadores_de_declaracion
   19                               | calificador_de_tipo

   20 especificador_categoria_almacenamiento: AUTO
   21                                       | REGISTER
   22                                       | STATIC
   23                                       | EXTERN
   24                                       | TYPEDEF

   25 especificador_de_tipo: INT
   26                      | CHAR
   27                      | FLOAT
   28                      | DOUBLE
   29                      | SHORT
   30                      | VOID
   31                      | LONG
   32                      | SIGNED
   33                      | UNSIGNED
   34                      | especificador_estructura_o_union
   35                      | especificador_enum
   36                      | nombre_typedef

   37 calificador_de_tipo: CONST
   38                    | VOLATILE

   39 especificador_estructura_o_union: estructura_o_union tipo_identificador '{' lista_declaraciones_struct '}'
   40                                 | estructura_o_union tipo_identificador
   41                                 | '{' lista_declaraciones_struct '}'

   42 estructura_o_union: STRUCT
   43                   | UNION

   44 lista_declaraciones_struct: declaracion_struct
   45                           | lista_declaraciones_struct declaracion_struct

   46 lista_declaradores_init: declarador_init
   47                        | lista_declaradores_init ',' declarador_init

   48 declarador_init: declarador
   49                | declarador '=' inicializador

   50 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   51 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   52                                | especificador_de_tipo
   53                                | calificador_de_tipo lista_calificador_especificador
   54                                | calificador_de_tipo

   55 lista_declaradores_struct: declarador_struct
   56                          | lista_declaradores_struct ',' declarador_struct

   57 declarador_struct: declarador
   58                  | declarador ':' expresion_constante
   59                  | ':' expresion_constante

   60 especificador_enum: ENUM tipo_identificador '{' lista_de_enumerador '}'
   61                   | '{' lista_de_enumerador '}'
   62                   | ENUM tipo_identificador

   63 lista_de_enumerador: enumerador
   64                    | lista_de_enumerador ',' enumerador

   65 enumerador: tipo_identificador
   66           | tipo_identificador '=' expresion_constante

   67 declarador: apuntador declarador_directo
   68           | declarador_directo

   69 declarador_directo: tipo_identificador
   70                   | '(' declarador ')'
   71                   | tipo_identificador '[' expresion_constante ']'
   72                   | tipo_identificador '[' ']'
   73                   | tipo_identificador '(' lista_tipos_de_parametro ')'
   74                   | tipo_identificador '(' lista_de_identificadores ')'
   75                   | tipo_identificador '(' ')'

   76 apuntador: '*' lista_calificadores_de_tipo
   77          | '*'
   78          | '*' lista_calificadores_de_tipo apuntador
   79          | '*' apuntador

   80 lista_calificadores_de_tipo: calificador_de_tipo
   81                            | lista_calificadores_de_tipo calificador_de_tipo

   82 lista_tipos_de_parametro: lista_de_parametros
   83                         | lista_de_parametros ',' ELIPSIS

   84 lista_de_parametros: declaracion_parametro
   85                    | lista_de_parametros ',' declaracion_parametro

   86 declaracion_parametro: especificadores_de_declaracion declarador
   87                      | especificadores_de_declaracion declarador_abstracto
   88                      | especificadores_de_declaracion

   89 lista_de_identificadores: tipo_identificador
   90                         | lista_de_identificadores_bucle

   91 lista_de_identificadores_bucle: lista_de_identificadores ',' tipo_identificador

   92 inicializador: expresion_de_asignacion
   93              | '{' lista_de_inicializadores '}'
   94              | '{' lista_de_inicializadores ',' '}'

   95 lista_de_inicializadores: inicializador
   96                         | lista_de_inicializadores ',' inicializador

   97 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   98               | lista_calificador_especificador

   99 declarador_abstracto: apuntador
  100                     | apuntador declarador_abstracto_directo
  101                     | declarador_abstracto_directo

  102 declarador_abstracto_directo: '(' declarador_abstracto ')'
  103                             | declarador_abstracto_directo '[' expresion_constante ']'
  104                             | '[' ']'
  105                             | declarador_abstracto_directo '[' ']'
  106                             | '[' expresion_constante ']'
  107                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  108                             | '(' ')'
  109                             | declarador_abstracto_directo '(' ')'
  110                             | '(' lista_tipos_de_parametro ')'

  111 nombre_typedef: 't'

  112 sentencia: sentencia_etiquetada
  113          | sentencia_expresion
  114          | sentencia_compuesta
  115          | sentencia_de_iteracion
  116          | sentencia_de_seleccion
  117          | sentencia_de_salto

  118 sentencia_etiquetada: tipo_identificador ':' sentencia
  119                     | CASE expresion_constante ':' sentencia
  120                     | DEFAULT ':' sentencia

  121 sentencia_expresion: expresion ';'
  122                    | ';'

  123 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  124                    | '{' '}'
  125                    | '{' lista_de_declaracion '}'
  126                    | '{' lista_de_sentencias '}'

  127 lista_de_sentencias: sentencia
  128                    | lista_de_sentencias sentencia

  129 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  130                       | IF '(' expresion ')' sentencia ELSE sentencia
  131                       | SWITCH '(' expresion ')' sentencia

  132 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  133                       | DO sentencia WHILE '(' expresion ')' ';'
  134                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia
  135                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  136                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  137                       | FOR '(' expresion ';' ';' ')' sentencia
  138                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  139                       | FOR '(' ';' expresion ';' ')' sentencia
  140                       | FOR '(' ';' ';' expresion ')' sentencia
  141                       | FOR '(' ';' ';' ')' sentencia

  142 sentencia_de_salto: GOTO tipo_identificador ';'
  143                   | CONTINUE ';'
  144                   | BREAK ';'
  145                   | RETURN expresion ';'
  146                   | RETURN ';'

  147 expresion: expresion_de_asignacion
  148          | expresion ',' expresion_de_asignacion

  149 expresion_de_asignacion: expresion_condicional
  150                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  151 operador_de_asignacion: POR_IGUAL
  152                       | DIV_IGUAL
  153                       | MAS_IGUAL
  154                       | MENOS_IGUAL
  155                       | MOD_IGUAL
  156                       | CORR_IZQ_IGUAL
  157                       | CORR_DER_IGUAL
  158                       | Y_IGUAL
  159                       | POT_IGUAL
  160                       | O_IGUAL
  161                       | '='

  162 expresion_condicional: expresion_logica_OR
  163                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  164 expresion_constante: expresion_condicional

  165 expresion_logica_OR: expresion_logica_AND
  166                    | expresion_logica_OR CTE_OR expresion_logica_AND

  167 expresion_logica_AND: expresion_OR_inclusivo
  168                     | expresion_logica_AND CTE_AND expresion_OR_inclusivo

  169 expresion_OR_inclusivo: expresion_OR_exclusivo
  170                       | expresion_OR_inclusivo '|' expresion_OR_exclusivo

  171 expresion_OR_exclusivo: expresion_AND
  172                       | expresion_OR_exclusivo '^' expresion_AND

  173 expresion_AND: expresion_de_igualdad
  174              | expresion_AND '&' expresion_de_igualdad

  175 expresion_de_igualdad: expresion_relacional
  176                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  177                      | expresion_de_igualdad DISTINTO expresion_relacional

  178 expresion_relacional: expresion_de_corrimiento
  179                     | expresion_relacional '<' expresion_de_corrimiento
  180                     | expresion_relacional '>' expresion_de_corrimiento
  181                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  182                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  183 expresion_de_corrimiento: expresion_aditiva
  184                         | expresion_de_corrimiento CORR_IZQ expresion_aditiva
  185                         | expresion_de_corrimiento CORR_DER expresion_aditiva

  186 expresion_aditiva: expresion_multiplicativa
  187                  | expresion_aditiva '+' expresion_multiplicativa
  188                  | expresion_aditiva '-' expresion_multiplicativa

  189 expresion_multiplicativa: expresion_cast
  190                         | expresion_multiplicativa '*' expresion_cast
  191                         | expresion_multiplicativa '/' expresion_cast
  192                         | expresion_multiplicativa '%' expresion_cast

  193 expresion_cast: expresion_unaria
  194               | '(' nombre_de_tipo ')' expresion_cast

  195 expresion_unaria: expresion_posfija
  196                 | MENOS_MENOS expresion_unaria
  197                 | MAS_MAS expresion_unaria
  198                 | operador_unario expresion_cast
  199                 | SIZEOF expresion_unaria
  200                 | SIZEOF '(' nombre_de_tipo ')'

  201 operador_unario: '&'
  202                | '*'
  203                | '+'
  204                | '-'
  205                | '~'
  206                | '!'

  207 expresion_posfija: expresion_primaria
  208                  | expresion_posfija '[' expresion ']'
  209                  | expresion_posfija '(' lista_expresiones_argumento ')'
  210                  | expresion_posfija '(' ')'
  211                  | expresion_posfija '.' tipo_identificador
  212                  | expresion_posfija FLECHA tipo_identificador
  213                  | expresion_posfija MENOS_MENOS
  214                  | expresion_posfija MAS_MAS

  215 expresion_primaria: tipo_identificador
  216                   | constante
  217                   | LITERAL_CADENA
  218                   | '(' expresion ')'

  219 lista_expresiones_argumento: expresion_de_asignacion
  220                            | lista_expresiones_argumento ',' expresion_de_asignacion

  221 tipo_identificador: IDENTIFICADOR
  222                   | no_reconocido

  223 constante: CONST_OCTAL
  224          | CONST_HEXADECIMAL
  225          | CONST_DECIMAL
  226          | CONST_CARACTER
  227          | CONST_PTOFLOTANTE
  228          | ENUM


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 206
    '%' (37) 192
    '&' (38) 174 201
    '(' (40) 70 73 74 75 102 107 108 109 110 129 130 131 132 133 134 135 136 137 138 139 140 141 194 200 209 210 218
    ')' (41) 70 73 74 75 102 107 108 109 110 129 130 131 132 133 134 135 136 137 138 139 140 141 194 200 209 210 218
    '*' (42) 76 77 78 79 190 202
    '+' (43) 187 203
    ',' (44) 47 56 64 83 85 91 94 96 148 220
    '-' (45) 188 204
    '.' (46) 211
    '/' (47) 191
    ':' (58) 58 59 118 119 120 163
    ';' (59) 10 11 50 121 122 133 134 135 136 137 138 139 140 141 142 143 144 145 146
    '<' (60) 179
    '=' (61) 49 66 161
    '>' (62) 180
    '?' (63) 163
    '[' (91) 71 72 103 104 105 106 208
    ']' (93) 71 72 103 104 105 106 208
    '^' (94) 172
    't' (116) 111
    '{' (123) 39 41 60 61 93 94 123 124 125 126
    '|' (124) 170
    '}' (125) 39 41 60 61 93 94 123 124 125 126
    '~' (126) 205
    error (256)
    INCLUDE (258)
    DEFINE (259)
    AUTO (260) 20
    REGISTER (261) 21
    STATIC (262) 22
    EXTERN (263) 23
    TYPEDEF (264) 24
    VOID (265) 30
    CHAR (266) 26
    SHORT (267) 29
    INT (268) 25
    LONG (269) 31
    FLOAT (270) 27
    DOUBLE (271) 28
    SIGNED (272) 32
    UNSIGNED (273) 33
    CONST (274) 37
    VOLATILE (275) 38
    ENUM (276) 60 62 228
    CASE (277) 119
    DEFAULT (278) 120
    IF (279) 129 130
    SWITCH (280) 131
    ELSE (281) 130
    FOR (282) 134 135 136 137 138 139 140 141
    DO (283) 133
    WHILE (284) 132 133
    GOTO (285) 142
    CONTINUE (286) 143
    BREAK (287) 144
    STRUCT (288) 42
    UNION (289) 43
    RETURN (290) 145 146
    SIZEOF (291) 199 200
    CTE_OR (292) 166
    CTE_AND (293) 168
    ELIPSIS (294) 83
    IGUAL_IGUAL (295) 176
    DISTINTO (296) 177
    MENOR_IGUAL (297) 181
    MAYOR_IGUAL (298) 182
    CORR_DER (299) 185
    CORR_IZQ (300) 184
    MAS_MAS (301) 197 214
    MENOS_MENOS (302) 196 213
    FLECHA (303) 212
    POR_IGUAL (304) 151
    DIV_IGUAL (305) 152
    MAS_IGUAL (306) 153
    MENOS_IGUAL (307) 154
    MOD_IGUAL (308) 155
    CORR_DER_IGUAL (309) 157
    CORR_IZQ_IGUAL (310) 156
    Y_IGUAL (311) 158
    POT_IGUAL (312) 159
    O_IGUAL (313) 160
    IDENTIFICADOR (314) 221
    LITERAL_CADENA (315) 217
    CONST_OCTAL (316) 223
    CONST_HEXADECIMAL (317) 224
    CONST_DECIMAL (318) 225
    CONST_PTOFLOTANTE (319) 227
    CONST_CARACTER (320) 226
    NO_RECONOCIDO (321) 1
    IFX (322)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    no_reconocido (94)
        on left: 1
        on right: 222
    unidad_de_traduccion (95)
        on left: 2 3
        on right: 0 3
    declaracion_externa (96)
        on left: 4 5
        on right: 2 3
    definicion_de_funcion (97)
        on left: 6 7 8 9
        on right: 4
    declaracion (98)
        on left: 10 11
        on right: 5 12 13
    lista_de_declaracion (99)
        on left: 12 13
        on right: 6 7 13 123 125
    especificadores_de_declaracion (100)
        on left: 14 15 16 17 18 19
        on right: 6 8 10 11 14 16 18 86 87 88
    especificador_categoria_almacenamiento (101)
        on left: 20 21 22 23 24
        on right: 14 15
    especificador_de_tipo (102)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 16 17 51 52
    calificador_de_tipo (103)
        on left: 37 38
        on right: 18 19 53 54 80 81
    especificador_estructura_o_union (104)
        on left: 39 40 41
        on right: 34
    estructura_o_union (105)
        on left: 42 43
        on right: 39 40
    lista_declaraciones_struct (106)
        on left: 44 45
        on right: 39 41 45
    lista_declaradores_init (107)
        on left: 46 47
        on right: 10 47
    declarador_init (108)
        on left: 48 49
        on right: 46 47
    declaracion_struct (109)
        on left: 50
        on right: 44 45
    lista_calificador_especificador (110)
        on left: 51 52 53 54
        on right: 50 51 53 97 98
    lista_declaradores_struct (111)
        on left: 55 56
        on right: 50 56
    declarador_struct (112)
        on left: 57 58 59
        on right: 55 56
    especificador_enum (113)
        on left: 60 61 62
        on right: 35
    lista_de_enumerador (114)
        on left: 63 64
        on right: 60 61 64
    enumerador (115)
        on left: 65 66
        on right: 63 64
    declarador (116)
        on left: 67 68
        on right: 6 7 8 9 48 49 57 58 70 86
    declarador_directo (117)
        on left: 69 70 71 72 73 74 75
        on right: 67 68
    apuntador (118)
        on left: 76 77 78 79
        on right: 67 78 79 99 100
    lista_calificadores_de_tipo (119)
        on left: 80 81
        on right: 76 78 81
    lista_tipos_de_parametro (120)
        on left: 82 83
        on right: 73 107 110
    lista_de_parametros (121)
        on left: 84 85
        on right: 82 83 85
    declaracion_parametro (122)
        on left: 86 87 88
        on right: 84 85
    lista_de_identificadores (123)
        on left: 89 90
        on right: 74 91
    lista_de_identificadores_bucle (124)
        on left: 91
        on right: 90
    inicializador (125)
        on left: 92 93 94
        on right: 49 95 96
    lista_de_inicializadores (126)
        on left: 95 96
        on right: 93 94 96
    nombre_de_tipo (127)
        on left: 97 98
        on right: 194 200
    declarador_abstracto (128)
        on left: 99 100 101
        on right: 87 97 102
    declarador_abstracto_directo (129)
        on left: 102 103 104 105 106 107 108 109 110
        on right: 100 101 103 105 107 109
    nombre_typedef (130)
        on left: 111
        on right: 36
    sentencia (131)
        on left: 112 113 114 115 116 117
        on right: 118 119 120 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    sentencia_etiquetada (132)
        on left: 118 119 120
        on right: 112
    sentencia_expresion (133)
        on left: 121 122
        on right: 113
    sentencia_compuesta (134)
        on left: 123 124 125 126
        on right: 6 7 8 9 114
    lista_de_sentencias (135)
        on left: 127 128
        on right: 123 126 128
    sentencia_de_seleccion (136)
        on left: 129 130 131
        on right: 116
    sentencia_de_iteracion (137)
        on left: 132 133 134 135 136 137 138 139 140 141
        on right: 115
    sentencia_de_salto (138)
        on left: 142 143 144 145 146
        on right: 117
    expresion (139)
        on left: 147 148
        on right: 121 129 130 131 132 133 134 135 136 137 138 139 140 145 148 163 208 218
    expresion_de_asignacion (140)
        on left: 149 150
        on right: 92 147 148 150 219 220
    operador_de_asignacion (141)
        on left: 151 152 153 154 155 156 157 158 159 160 161
        on right: 150
    expresion_condicional (142)
        on left: 162 163
        on right: 149 163 164
    expresion_constante (143)
        on left: 164
        on right: 58 59 66 71 103 106 119
    expresion_logica_OR (144)
        on left: 165 166
        on right: 162 163 166
    expresion_logica_AND (145)
        on left: 167 168
        on right: 165 166 168
    expresion_OR_inclusivo (146)
        on left: 169 170
        on right: 167 168 170
    expresion_OR_exclusivo (147)
        on left: 171 172
        on right: 169 170 172
    expresion_AND (148)
        on left: 173 174
        on right: 171 172 174
    expresion_de_igualdad (149)
        on left: 175 176 177
        on right: 173 174 176 177
    expresion_relacional (150)
        on left: 178 179 180 181 182
        on right: 175 176 177 179 180 181 182
    expresion_de_corrimiento (151)
        on left: 183 184 185
        on right: 178 179 180 181 182 184 185
    expresion_aditiva (152)
        on left: 186 187 188
        on right: 183 184 185 187 188
    expresion_multiplicativa (153)
        on left: 189 190 191 192
        on right: 186 187 188 190 191 192
    expresion_cast (154)
        on left: 193 194
        on right: 189 190 191 192 194 198
    expresion_unaria (155)
        on left: 195 196 197 198 199 200
        on right: 150 193 196 197 199
    operador_unario (156)
        on left: 201 202 203 204 205 206
        on right: 198
    expresion_posfija (157)
        on left: 207 208 209 210 211 212 213 214
        on right: 195 208 209 210 211 212 213 214
    expresion_primaria (158)
        on left: 215 216 217 218
        on right: 207
    lista_expresiones_argumento (159)
        on left: 219 220
        on right: 209 220
    tipo_identificador (160)
        on left: 221 222
        on right: 39 40 60 62 65 66 69 71 72 73 74 75 89 91 118 142 211 212 215
    constante (161)
        on left: 223 224 225 226 227 228
        on right: 216


State 0

    0 $accept: . unidad_de_traduccion $end

    AUTO           shift, and go to state 1
    REGISTER       shift, and go to state 2
    STATIC         shift, and go to state 3
    EXTERN         shift, and go to state 4
    TYPEDEF        shift, and go to state 5
    VOID           shift, and go to state 6
    CHAR           shift, and go to state 7
    SHORT          shift, and go to state 8
    INT            shift, and go to state 9
    LONG           shift, and go to state 10
    FLOAT          shift, and go to state 11
    DOUBLE         shift, and go to state 12
    SIGNED         shift, and go to state 13
    UNSIGNED       shift, and go to state 14
    CONST          shift, and go to state 15
    VOLATILE       shift, and go to state 16
    ENUM           shift, and go to state 17
    STRUCT         shift, and go to state 18
    UNION          shift, and go to state 19
    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21
    '*'            shift, and go to state 22
    '('            shift, and go to state 23
    '{'            shift, and go to state 24
    't'            shift, and go to state 25

    no_reconocido                           go to state 26
    unidad_de_traduccion                    go to state 27
    declaracion_externa                     go to state 28
    definicion_de_funcion                   go to state 29
    declaracion                             go to state 30
    especificadores_de_declaracion          go to state 31
    especificador_categoria_almacenamiento  go to state 32
    especificador_de_tipo                   go to state 33
    calificador_de_tipo                     go to state 34
    especificador_estructura_o_union        go to state 35
    estructura_o_union                      go to state 36
    especificador_enum                      go to state 37
    declarador                              go to state 38
    declarador_directo                      go to state 39
    apuntador                               go to state 40
    nombre_typedef                          go to state 41
    tipo_identificador                      go to state 42


State 1

   20 especificador_categoria_almacenamiento: AUTO .

    $default  reduce using rule 20 (especificador_categoria_almacenamiento)


State 2

   21 especificador_categoria_almacenamiento: REGISTER .

    $default  reduce using rule 21 (especificador_categoria_almacenamiento)


State 3

   22 especificador_categoria_almacenamiento: STATIC .

    $default  reduce using rule 22 (especificador_categoria_almacenamiento)


State 4

   23 especificador_categoria_almacenamiento: EXTERN .

    $default  reduce using rule 23 (especificador_categoria_almacenamiento)


State 5

   24 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce using rule 24 (especificador_categoria_almacenamiento)


State 6

   30 especificador_de_tipo: VOID .

    $default  reduce using rule 30 (especificador_de_tipo)


State 7

   26 especificador_de_tipo: CHAR .

    $default  reduce using rule 26 (especificador_de_tipo)


State 8

   29 especificador_de_tipo: SHORT .

    $default  reduce using rule 29 (especificador_de_tipo)


State 9

   25 especificador_de_tipo: INT .

    $default  reduce using rule 25 (especificador_de_tipo)


State 10

   31 especificador_de_tipo: LONG .

    $default  reduce using rule 31 (especificador_de_tipo)


State 11

   27 especificador_de_tipo: FLOAT .

    $default  reduce using rule 27 (especificador_de_tipo)


State 12

   28 especificador_de_tipo: DOUBLE .

    $default  reduce using rule 28 (especificador_de_tipo)


State 13

   32 especificador_de_tipo: SIGNED .

    $default  reduce using rule 32 (especificador_de_tipo)


State 14

   33 especificador_de_tipo: UNSIGNED .

    $default  reduce using rule 33 (especificador_de_tipo)


State 15

   37 calificador_de_tipo: CONST .

    $default  reduce using rule 37 (calificador_de_tipo)


State 16

   38 calificador_de_tipo: VOLATILE .

    $default  reduce using rule 38 (calificador_de_tipo)


State 17

   60 especificador_enum: ENUM . tipo_identificador '{' lista_de_enumerador '}'
   62                   | ENUM . tipo_identificador

    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21

    no_reconocido       go to state 26
    tipo_identificador  go to state 43


State 18

   42 estructura_o_union: STRUCT .

    $default  reduce using rule 42 (estructura_o_union)


State 19

   43 estructura_o_union: UNION .

    $default  reduce using rule 43 (estructura_o_union)


State 20

  221 tipo_identificador: IDENTIFICADOR .

    $default  reduce using rule 221 (tipo_identificador)


State 21

    1 no_reconocido: NO_RECONOCIDO .

    $default  reduce using rule 1 (no_reconocido)


State 22

   76 apuntador: '*' . lista_calificadores_de_tipo
   77          | '*' .
   78          | '*' . lista_calificadores_de_tipo apuntador
   79          | '*' . apuntador

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 22

    $default  reduce using rule 77 (apuntador)

    calificador_de_tipo          go to state 44
    apuntador                    go to state 45
    lista_calificadores_de_tipo  go to state 46


State 23

   70 declarador_directo: '(' . declarador ')'

    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21
    '*'            shift, and go to state 22
    '('            shift, and go to state 23

    no_reconocido       go to state 26
    declarador          go to state 47
    declarador_directo  go to state 39
    apuntador           go to state 40
    tipo_identificador  go to state 42


State 24

   41 especificador_estructura_o_union: '{' . lista_declaraciones_struct '}'
   61 especificador_enum: '{' . lista_de_enumerador '}'

    VOID           shift, and go to state 6
    CHAR           shift, and go to state 7
    SHORT          shift, and go to state 8
    INT            shift, and go to state 9
    LONG           shift, and go to state 10
    FLOAT          shift, and go to state 11
    DOUBLE         shift, and go to state 12
    SIGNED         shift, and go to state 13
    UNSIGNED       shift, and go to state 14
    CONST          shift, and go to state 15
    VOLATILE       shift, and go to state 16
    ENUM           shift, and go to state 17
    STRUCT         shift, and go to state 18
    UNION          shift, and go to state 19
    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21
    '{'            shift, and go to state 24
    't'            shift, and go to state 25

    no_reconocido                     go to state 26
    especificador_de_tipo             go to state 48
    calificador_de_tipo               go to state 49
    especificador_estructura_o_union  go to state 35
    estructura_o_union                go to state 36
    lista_declaraciones_struct        go to state 50
    declaracion_struct                go to state 51
    lista_calificador_especificador   go to state 52
    especificador_enum                go to state 37
    lista_de_enumerador               go to state 53
    enumerador                        go to state 54
    nombre_typedef                    go to state 41
    tipo_identificador                go to state 55


State 25

  111 nombre_typedef: 't' .

    $default  reduce using rule 111 (nombre_typedef)


State 26

  222 tipo_identificador: no_reconocido .

    $default  reduce using rule 222 (tipo_identificador)


State 27

    0 $accept: unidad_de_traduccion . $end
    3 unidad_de_traduccion: unidad_de_traduccion . declaracion_externa

    $end           shift, and go to state 56
    AUTO           shift, and go to state 1
    REGISTER       shift, and go to state 2
    STATIC         shift, and go to state 3
    EXTERN         shift, and go to state 4
    TYPEDEF        shift, and go to state 5
    VOID           shift, and go to state 6
    CHAR           shift, and go to state 7
    SHORT          shift, and go to state 8
    INT            shift, and go to state 9
    LONG           shift, and go to state 10
    FLOAT          shift, and go to state 11
    DOUBLE         shift, and go to state 12
    SIGNED         shift, and go to state 13
    UNSIGNED       shift, and go to state 14
    CONST          shift, and go to state 15
    VOLATILE       shift, and go to state 16
    ENUM           shift, and go to state 17
    STRUCT         shift, and go to state 18
    UNION          shift, and go to state 19
    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21
    '*'            shift, and go to state 22
    '('            shift, and go to state 23
    '{'            shift, and go to state 24
    't'            shift, and go to state 25

    no_reconocido                           go to state 26
    declaracion_externa                     go to state 57
    definicion_de_funcion                   go to state 29
    declaracion                             go to state 30
    especificadores_de_declaracion          go to state 31
    especificador_categoria_almacenamiento  go to state 32
    especificador_de_tipo                   go to state 33
    calificador_de_tipo                     go to state 34
    especificador_estructura_o_union        go to state 35
    estructura_o_union                      go to state 36
    especificador_enum                      go to state 37
    declarador                              go to state 38
    declarador_directo                      go to state 39
    apuntador                               go to state 40
    nombre_typedef                          go to state 41
    tipo_identificador                      go to state 42


State 28

    2 unidad_de_traduccion: declaracion_externa .

    $default  reduce using rule 2 (unidad_de_traduccion)


State 29

    4 declaracion_externa: definicion_de_funcion .

    $default  reduce using rule 4 (declaracion_externa)


State 30

    5 declaracion_externa: declaracion .

    $default  reduce using rule 5 (declaracion_externa)


State 31

    6 definicion_de_funcion: especificadores_de_declaracion . declarador lista_de_declaracion sentencia_compuesta
    8                      | especificadores_de_declaracion . declarador sentencia_compuesta
   10 declaracion: especificadores_de_declaracion . lista_declaradores_init ';'
   11            | especificadores_de_declaracion . ';'

    IDENTIFICADOR  shift, and go to state 20
    NO_RECONOCIDO  shift, and go to state 21
    '*'            shift, and go to state 22
    '('            shift, and go to state 23
    ';'            shift, and go to state 58

    no_reconocido            go to state 26
    lista_declaradores_init  go to state 59
    declarador_init          go to state 60
    declarador               go to state 61
    declarador_directo       go to state 39
    apuntador                go to state 40
    tipo_identificador       go to state 42


State 32

   14 especificadores_de_declaracion: especificador_categoria_almacenamiento . especificadores_de_declaracion
   15                               | especificador_categoria_almacenamiento .

    AUTO      shift, and go to state 1
    REGISTER  shift, and go to state 2
    STATIC    shift, and go to state 3
    EXTERN    shift, and go to state 4
    TYPEDEF   shift, and go to state 5
    VOID      shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    SIGNED    shift, and go to state 13
    UNSIGNED  shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    ENUM      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    '{'       shift, and go to state 24
    't'       shift, and go to state 25

    $default  reduce using rule 15 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 62
    especificador_categoria_almacenamiento  go to state 32
    especificador_de_tipo                   go to state 33
    calificador_de_tipo                     go to state 34
    especificador_estructura_o_union        go to state 35
    estructura_o_union                      go to state 36
    especificador_enum                      go to state 37
    nombre_typedef                          go to state 41


State 33

   16 especificadores_de_declaracion: especificador_de_tipo . especificadores_de_declaracion
   17                               | especificador_de_tipo .

    AUTO      shift, and go to state 1
    REGISTER  shift, and go to state 2
    STATIC    shift, and go to state 3
    EXTERN    shift, and go to state 4
    TYPEDEF   shift, and go to state 5
    VOID      shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    SIGNED    shift, and go to state 13
    UNSIGNED  shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    ENUM      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    '{'       shift, and go to state 24
    't'       shift, and go to state 25

    $default  reduce using rule 17 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 63
    especificador_categoria_almacenamiento  go to state 32
    especificador_de_tipo                   go to state 33
    calificador_de_tipo                     go to state 34
    especificador_estructura_o_union        go to state 35
    estructura_o_union                      go to state 36
    especificador_enum                      go to state 37
    nombre_typedef                          go to state 41


State 34

   18 especificadores_de_declaracion: calificador_de_tipo . especificadores_de_declaracion
   19                               | calificador_de_tipo .
